@startuml Week8_Complete_System

!theme plain
skinparam shadowing false
skinparam roundcorner 10
skinparam linetype ortho

title Week 8: Command and Adapter Patterns

' ============================================
' COMMAND PATTERN
' ============================================
package "Command Pattern" #FFE6E6 {
    class PosRemote <<invoker>> {
        -Command[] slots
        -Deque<Command> history
        +setSlot(int, Command)
        +press(int)
        +undo()
    }
    
    interface Command {
        +execute()
        +undo() : default
    }
    
    class AddItemCommand {
        -OrderService service
        -String recipe
        -int qty
        +execute()
        +undo()
    }
    
    class PayOrderCommand {
        -OrderService service
        -PaymentStrategy strategy
        -int taxPercent
        +execute()
    }
    
    class MacroCommand {
        -Command[] steps
        +execute()
        +undo()
    }
    
    class OrderService <<receiver>> {
        -ProductFactory factory
        -Order order
        +addItem(String, int)
        +removeLastItem()
        +pay(PaymentStrategy, int)
    }
    
    PosRemote --> Command
    Command <|.. AddItemCommand
    Command <|.. PayOrderCommand
    Command <|.. MacroCommand
    MacroCommand --> Command : aggregates
    AddItemCommand --> OrderService
    PayOrderCommand --> OrderService
}

' ============================================
' ADAPTER PATTERN
' ============================================
package "Adapter Pattern" #E6F3FF {
    interface Printer {
        +print(String receiptText)
    }
    
    class LegacyPrinterAdapter {
        -LegacyThermalPrinter legacyPrinter
        +print(String receiptText)
    }
    
    class LegacyThermalPrinter <<vendor>> {
        +legacyPrint(byte[] payload)
    }
    
    Printer <|.. LegacyPrinterAdapter
    LegacyPrinterAdapter --> LegacyThermalPrinter
}

' ============================================
' DOMAIN MODEL
' ============================================
package "Domain Model" #E6FFE6 {
    class Order {
        -long id
        -List<LineItem> items
        +addItem(LineItem)
        +totalWithTax(int) : Money
    }
    
    class LineItem {
        -Product product
        -int quantity
    }
    
    interface Product {
        +id() : String
        +name() : String
        +basePrice() : Money
    }
    
    class Money {
        +add(Money) : Money
        +multiply(double) : Money
    }
    
    interface PaymentStrategy {
        +pay(Order order)
    }
    
    class ProductFactory {
        +create(String recipe) : Product
    }
    
    Order --> LineItem : contains
    LineItem --> Product : contains
    Product --> Money : uses
    Order --> Money : uses
    Order --> PaymentStrategy : uses
}

' Relationships between patterns
OrderService --> Order
OrderService --> ProductFactory
OrderService --> PaymentStrategy
PayOrderCommand --> PaymentStrategy

legend right
    |= Pattern |= Color |
    | Command | #FFE6E6 |
    | Adapter | #E6F3FF |
    | Domain | #E6FFE6 |
    | Vendor | #FFF4E6 |
endlegend

@enduml


